2016-07-01  Jer Noble  <jer.noble@apple.com>

        Deadlock inside -[WebCoreNSURLSession dealloc]
        https://bugs.webkit.org/show_bug.cgi?id=159331
        <rdar://problem/27122716>

        Reviewed by Alex Christensen.

        A Function<> object can wrap any callable type, including a C++ lambda.

        dispatchFunctionsFromMainThread() holds a lock while iterating over the functions in
        functionQueue(), and during ths iteration, the previous callable object is destroyed by
        assigning the result of functionQueue().takeFirst(). Because lambdas (and other callables,
        like functors) can own objects, destroying this callable can have side effects, and if one
        of those side effects is to call callOnMainThread(), this can deadlock.

        Move this side-effect-having call outside the locked block by clearing the function object
        immediately after calling it.

        * wtf/MainThread.cpp:
        (WTF::dispatchFunctionsFromMainThread):

2016-06-29  Jer Noble  <jer.noble@apple.com>

        Adopt MediaRemote.
        https://bugs.webkit.org/show_bug.cgi?id=159250

        Reviewed by Eric Carlson.

        Add USE_MEDIAREMOTE.

        * wtf/Platform.h:

2016-06-28  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r202580.
        https://bugs.webkit.org/show_bug.cgi?id=159245

        Caused all WKTR tests to fail on GuardMalloc and Production
        only for unknown reasons, investigating offline. (Requested by
        brrian on #webkit).

        Reverted changeset:

        "RunLoop::Timer should use constructor templates instead of
        class templates"
        https://bugs.webkit.org/show_bug.cgi?id=159153
        http://trac.webkit.org/changeset/202580

2016-06-28  Brian Burg  <bburg@apple.com>

        RunLoop::Timer should use constructor templates instead of class templates
        https://bugs.webkit.org/show_bug.cgi?id=159153

        Reviewed by Alex Christensen.
